--- a/index.html
+++ b/index.html
@@ -3,6 +3,7 @@
 <head>
 <title>Smart Agency Landing Page</title>
 <meta name="viewport" content="width=device-width, initial-scale=1">
+<meta charset="utf-8">
 <link rel="stylesheet" href="css/style.css">
 <link rel="stylesheet" href="css/bootstrap.css">
 <link rel="stylesheet" href="css/font-awesome.min.css">
@@ -20,8 +21,18 @@
 				</div>
 			</div>
 			<div class="col-lg-6 col-sm-6 col-sm-7 clearfix">
-				<nav>
-					<i class="fa fa-bars" aria-hidden="true"></i>
+				<nav class="pull-right">
+					<button class="dropdown-toggle" data-toggle="dropdown">
+						<i class="fa fa-bars" aria-hidden="true"></i>
+					</button>
+					<ul class="dropdown-menu">
+						<li><a href="#wp">Working process</a></li>
+						<li><a href="#fw">Featured works</a></li>
+						<li><a href="#s">Services</a></li>
+						<li><a href="#t">Team</a></li>
+						<li><a href="#cl">Clients</a></li>
+					</ul>
+					
 				</nav>
 			</div>
 		</div>
@@ -52,7 +63,7 @@
 		</div>
 	</div>
 </header>
-<article class="process">
+<article class="process"><a name="wp"></a>
 	<div class="container">
 		<div class="row">
 			<div class="col-md-12">
@@ -104,7 +115,7 @@
 		</div>
 	</div>
 </article>
-<article class="works">
+<article class="works"><a name="fw"></a>
 	<div class="container">
 		<div class="row">
 			<div class="col-md-12">
@@ -143,7 +154,7 @@
 		</div>
 	</div>
 </article>
-<article class="services">
+<article class="services"><a name="s"></a>
 	<div class="container">
 		<div class="row">
 			<div class="col-md-12">
@@ -183,7 +194,7 @@
 		</div>
 	</div>
 </article>
-<article class="team">
+<article class="team"><a name="t"></a>
 	<div class="container">
 		<div class="row">
 			<div class="col-md-12">
@@ -273,7 +284,7 @@
 		</div>
 	</div>
 </article>
-<article class="clients">
+<article class="clients"><a name="cl"></a>
 	<div class="container">
 		<div class="row">
 			<div class="col-md-12">
@@ -352,9 +363,10 @@
 	</div>
 </footer>
 <script
-  src="https://code.jquery.com/jquery-1.12.4.min.js"
+  src="http://code.jquery.com/jquery-1.12.4.min.js"
   integrity="sha256-ZosEbRLbNQzLpnKIkEdrPv7lOy9C27hHQ+Xp8a4MxAQ="
   crossorigin="anonymous"></script>
+<script type="text/javascript" src="bootstrap.min.js"></script>
 <script type="text/javascript" src="slick/slick.min.js"></script>
 <script type="text/javascript" src="js.js"></script>
 </body>
